--- a/styles/index.css
+++ b/styles/index.css
@@ -204,7 +204,7 @@
 
 #contact {
     background: rgb(212, 212, 212);
-    height: 90vh;
+    height: auto;
 }
 
 #contact .jumbotron-fluid {
@@ -241,6 +241,7 @@ footer {
 }
 
 footer .btn {
+    margin-top: 2em;
     margin-bottom: 2em;
 }
 
@@ -284,6 +285,10 @@ footer .btn {
 
     /* CONTACT */
 
+    #contact {
+        height: auto;
+    }
+
     #contact .info {
         margin: 1em;
     }
@@ -293,11 +298,12 @@ footer .btn {
         margin: 0.5em;
     }
 
-    #contact {
-        height: 90vh;
-    }
-
     .socials {
         margin-top: 0;
+    }
+
+    footer .btn {
+        margin-top: 0;
+        margin-bottom: 0.5em;
     }
 }
