--- a/styles/index.css
+++ b/styles/index.css
@@ -60,7 +60,7 @@
     text-align: center;
 }
 
-#arrow {
+.arrow {
     width: 100%;
     position: absolute;
     bottom: 3em;
@@ -70,7 +70,6 @@
 
 /*chevron animation*/
 .fa-chevron-down {
-   
     font-size: 5em;
     cursor: pointer;
     transition: all 0.5s;
@@ -278,8 +277,8 @@ footer .btn {
 }
 
 footer p {
-    display: block;
-    align-items: center;
+    padding-top: 0.3em;
+    text-align: center;
     background: black;
     width: 100%;
     height: 2em;
