--- a/styles/index.css
+++ b/styles/index.css
@@ -1,340 +1,335 @@
-
 @font-face {
-    font-family: KumbhSans-Regular;
-    src: url(fonts/Kumbh_Sans/KumbhSans-Regular.ttf);
+  font-family: KumbhSans-Regular;
+  src: url(fonts/Kumbh_Sans/KumbhSans-Regular.ttf);
 }
 
 * {
-    font-family: KumbhSans-Regular, sans-serif;
+  font-family: KumbhSans-Regular, sans-serif;
 }
-
 
 /* NAVBAR */
 .navbar-custom {
-    background: transparent;
-    position: fixed;
-    width: 100%;
-    z-index: 1;
-    transition: 700ms ease;
+  background: transparent;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
+  transition: 700ms ease;
 }
 
 .navbar-custom.scrolled {
-    background: black;
+  background: black;
 }
 
 .navbar-toggler {
-    border: none;
+  border: none;
 }
 
 .navbar-nav a.nav-link:hover {
-    color: grey !important;
+  color: grey !important;
 }
 
 .navbar-nav a.nav-link {
-    color: white !important;
+  color: white !important;
 }
 
 .navbar-nav a.nav-link.active {
-    color: grey !important;
+  color: grey !important;
 }
 
 .navbar-brand img {
-    width: 2em;
+  width: 2em;
 }
-
-
 
 /* INTRO */
 
 #introPage {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    min-height: 100vh;
-    background-image: url("../images/background-image/landing-page-bg-dark.jpg");
-    background-size: cover;
-    color: white;
-    display: flex;
-    flex-direction: column; 
-    justify-content: center;
-    text-align: center;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  background-image: url("../images/background-image/greenHills-landing-page.jpg");
+  background-size: cover;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
 }
 
 .arrow {
-    width: 100%;
-    position: absolute;
-    bottom: 3em;
-    display: flex;
-    justify-content: center;
+  width: 100%;
+  position: absolute;
+  bottom: 3em;
+  display: flex;
+  justify-content: center;
 }
 
-.aboutArrow, .experienceArrow, .projectArrow {
-    margin-bottom: 3em;
+.aboutArrow,
+.experienceArrow,
+.projectArrow {
+  margin-bottom: 3em;
+  margin-top: 3em;
 }
 
 /*chevron animation*/
-.fa-chevron-circle-down, .fa-chevron-circle-up {
-    font-size: 5rem;
-    cursor: pointer;
-    transition: all 0.5s;
-	-webkit-animation: action 1s infinite alternate;
-	animation: action 1s infinite alternate;
+.fa-chevron-circle-down,
+.fa-chevron-circle-up {
+  font-size: 5rem;
+  cursor: pointer;
+  transition: all 0.5s;
+  -webkit-animation: action 1s infinite alternate;
+  animation: action 1s infinite alternate;
 }
 
 .fa-chevron-circle-up {
-    margin-top: 0.5em;
+  margin-top: 0.5em;
 }
 
 @-webkit-keyframes action {
-	0% {
-		transform: translateY(0);
-	}
-	100% {
-		transform: translateY(-10px);
-	}
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
 }
 @keyframes action {
-	0% {
-		transform: translateY(0);
-	}
-	100% {
-		transform: translateY(-10px);
-	}
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
 }
 
 /* APPLIES TO ALL */
 h2 {
-    margin-top: 3em;
+  margin-top: 3em;
 }
 
-
-#about, #projects {
-    width: 100%;
-    height: 100%;
-    min-height: 100vh;
+#about,
+#projects {
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
 }
 
-
-#experience, #contact {
-    background: rgb(212, 212, 212);
-    width: 100%;
-    height: 100%;
-    min-height: 100vh;
+#experience,
+#contact {
+  background: rgb(212, 212, 212);
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
 }
 
 .jumbotron-fluid {
-    display: flex;
-    flex-direction: column; 
-    justify-content: center;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
 }
 
-#about .jumbotron-fluid, #contact .jumbotron-fluid {
-    align-items: center;
+#about .jumbotron-fluid,
+#contact .jumbotron-fluid {
+  align-items: center;
 }
 
 /* ABOUT */
 
 .prof-pic {
-    width: 10em;
+  width: 10em;
 }
 
 #about .container {
-    margin-bottom: 2em;
+  margin-bottom: 2em;
 }
 
 .info {
-    margin: 2em;
+  margin: 2em;
 }
 .socials {
-    width: auto;
-    height: 10vh;
+  width: auto;
+  height: 10vh;
 }
 
 .socials-icon {
-    color:white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 .socials a {
-    color: #FFFFFF;
-    text-decoration: none;
+  color: #ffffff;
+  text-decoration: none;
 }
 
-
 .socials i {
-    color: white;
-    margin: 0.3em;
-	font-size: 2.75rem;
-	transition: all 0.5s;
+  color: white;
+  margin: 0.3em;
+  font-size: 2.75rem;
+  transition: all 0.5s;
 }
 
 .socials i:hover {
-	color: #007bff;
-	font-size: 3rem;
+  color: #007bff;
+  font-size: 3rem;
 }
-
-
 
 /* EXPERIENCE */
 
 .tech-work {
-    display: flex;
+  display: flex;
+  margin-bottom: 3em;
 }
 
 .techs {
-    width: 60vw;
-    height: 50vh;
-    margin-top: 2em;
-    margin-right: 5em;
-    text-align: left;
+  width: 60vw;
+  margin-top: 2em;
+  margin-right: 5em;
+  text-align: left;
 }
 
 .logos {
-    text-align: center;
+  text-align: center;
 }
 
 .icon {
-    width: 5em;
-    margin: 1em;
+  width: 5em;
+  margin: 1em;
 }
 
 .small-icon {
-    width: 2em;
+  width: 2em;
 }
 
 .work {
-    display: inline-flex;
-    flex-direction: column;
-    width: 40vw;
-    margin-top: 2em;
-    align-items: center;
+  display: inline-flex;
+  flex-direction: column;
+  width: 40vw;
+  margin-top: 2em;
+  align-items: center;
 }
 
 .work .icon {
-    flex-wrap: wrap;
-    width: 9em;
-    margin: 1em;
+  flex-wrap: wrap;
+  width: 9em;
+  margin: 1em;
 }
 
 /* PROJECTS */
 
 .project-work {
-    margin-top: 2em;
-    display: inline-flex;
-    justify-content: center;
+  margin-top: 2em;
+  display: inline-flex;
+  justify-content: center;
 }
 
 .card {
-    width: 30em;
-    margin: 0.5em;
-} 
+  width: 30em;
+  margin: 0.5em;
+}
 
 .profile {
-    margin-bottom: 2em;
+  margin-bottom: 2em;
 }
 
 /* CONTACT */
 
 .cv {
-    
-    color: white;
+  color: white;
 }
 
 form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.form-group-email, .form-group-name {
-    width: 40%;
+.form-group-email,
+.form-group-name {
+  width: 40%;
 }
 
 .form-group {
-    width: 70%;
+  width: 70%;
 }
 
-
 #message {
-    height: 20vh;
-} 
+  height: 20vh;
+}
 
 /* CONTACT MODALS */
 .modal-body {
-    padding-bottom: 0;
+  padding-bottom: 0;
 }
 
 .modal-footer {
-    justify-content:center;
-    border: none; 
+  justify-content: center;
+  border: none;
 }
 
 .thumbs-up {
-    background-color: #007bff;
-    border-color: #007bff;
+  background-color: #007bff;
+  border-color: #007bff;
 }
 
 /* FOOTER */
 
-
 footer p {
-    padding-top: 0.3em;
-    text-align: center;
-    background: black;
-    width: 100%;
-    height: 2em;
-    color: white;
-    margin-bottom: 0;
+  padding-top: 0.3em;
+  text-align: center;
+  background: black;
+  width: 100%;
+  height: 2em;
+  color: white;
+  margin-bottom: 0;
 }
-
 
 /* MEDIA QUERIES */
 /* Small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) {
-    .navbar {
-        background-color: black;
-    }
-    
-    /* EXPERIENCE */
-    .tech-work {
-        flex-direction: column;
-    }
+  .navbar {
+    background-color: black;
+  }
 
-    .techs {
-        width: 100%;
-        height: auto;
-        margin: 0;
-        text-align: center;
-    }
+  /* EXPERIENCE */
+  .tech-work {
+    flex-direction: column;
+  }
 
-    .logos .icon {
-        width: 4em;
-    }
+  .techs {
+    width: 100%;
+    height: auto;
+    margin: 0;
+    text-align: center;
+  }
 
-    .work {
-        width: 100%;
-        height: auto;
-        margin-bottom: 2em;
-    }
+  .logos .icon {
+    width: 4em;
+  }
 
-    /* CONTACT */
+  .work {
+    width: 100%;
+    height: auto;
+    margin-bottom: 2em;
+  }
 
-    #contact .info {
-        margin: 1em;
-    }
+  /* CONTACT */
 
-    #contact .icon {
-        width: 3.5em;
-        margin: 0.5em;
-    }
+  #contact .info {
+    margin: 1em;
+  }
 
-    .socials {
-        margin-top: 0;
-    }
+  #contact .icon {
+    width: 3.5em;
+    margin: 0.5em;
+  }
 
-    .form-group-email, .form-group-name{
-        width: 70%;
-    }
-    
+  .socials {
+    margin-top: 0;
+  }
+
+  .form-group-email,
+  .form-group-name {
+    width: 70%;
+  }
 }
